--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ fonttools==4.53.0
 frozenlist==1.4.1
 fsspec==2024.6.0
 funcy==2.0
+gensim==4.3.2
 gitdb==4.0.11
 GitPython==3.1.43
 grandalf==0.8
@@ -83,15 +84,19 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
+re==2.2.1
 rich==13.7.1
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.8
+scikit-learn==1.2.2
 scmrepo==3.3.5
+seaborn==0.13.1
 semver==3.0.2
 shellingham==1.5.4
 shortuuid==1.0.13
 shtab==1.7.1
 six==1.16.0
+sklearn-pandas==2.2.0
 smmap==5.0.1
 sqltrie==0.11.0
 tabulate==0.9.0
