--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -5,3 +5,20 @@ data:
   path: data/raw/Equity_Apartments_Data.csv 
   sample_size: 0.2
   random_state: 1
+  target_cols: ["Price"]
+
+defaults:
+  - _self_
+  - sample_data
+  - data_version
+  - model/model
+  - experiment
+  
+hydra:
+  mode: MULTIRUN
+  # launcher:
+  #   n_jobs: -1
+  sweeper:
+    params:
+      # +model: "lr"
+      +model: "pr, lr"
