--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ninel Yunusova"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.13"
+python = "3.11.9"
 dvc = "^3.51.2"
 dvc-gdrive = "^3.0.1"
 pandas = "^2.2.2"
@@ -23,6 +23,7 @@ zenml = {extras = ["server"], version = "^0.50.0"}
 apache-airflow = { extras = ["cncf.kubernetes"], version = "2.7.3" }
 flask-session2 = "^1.3.1"
 psycopg2-binary = "^2.9.9"
+gensim = "4.3.2"
 
 [build-system]
 requires = ["poetry-core"]
