--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -20,7 +20,7 @@ hydra:
   #   n_jobs: -1
   sweeper:
     params:
-      # +model: "decision_tree"
+      +model: "decision_tree"
       # +model: "gbr"
-      +model: "sn"
-      # +model: "pr, lr"
+      # +model: "sn"
+      # +model: "decision_tree, gbr, sn"
