--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,12 @@ dvc = "^3.51.2"
 dvc-gdrive = "^3.0.1"
 pandas = "^2.2.2"
 numpy = "<2.0.0"
+scipy = "^1.11.4"
 matplotlib = "^3.9.0"
 seaborn = "^0.13.2"
 scikit-learn = "^1.5.0"
 category-encoders = "^2.6.3"
 hydra-core = "^1.3.2"
-kaggle = "^1.6.14"
 pytest = "^8.2.2"
 great-expectations = "^0.18.16"
 zenml = {extras = ["server"], version = "^0.50.0"}
