--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ torch = "^2.3.1"
 torchvision = "^0.18.1"
 torchaudio = "^2.3.1"
 skorch = "^1.0.0"
+giskard = "2.14.0"
 
 [build-system]
 requires = ["poetry-core"]
