4 phase finish script, but not work

--- a/configs/model/model.yaml
+++ b/configs/model/model.yaml
@@ -15,7 +15,9 @@ metrics:
   neg_root_mean_squared_error: "neg_root_mean_squared_error"
   neg_mean_squared_error: "neg_mean_squared_error"
   neg_mean_absolute_error: "neg_mean_absolute_error"
-  
+
+num_challengers: 3
+
 # hydra:
 #   sweeper:
 #       sampler:
