--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -27,8 +27,8 @@ hydra:
   #   n_jobs: -1
   sweeper:
     params:
-      # +model: "decision_tree"
-      +model: "gbr"
+       +model: "decision_tree"
+#       +model: "gbr"
       # +model: "sn"
       # +model: "decision_tree, gbr, sn"
 
