--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -7,7 +7,7 @@ name: Example testing
 on: # Event
   push: # this will trigger the workflow/pipeline only if there is push on `main` branch
     branches:
-      - main
+      - dev-kama
     paths: # the push should be specifically to the folders `src` or `scripts` to trigger this workflow, otherwise, the workflow will not be triggered
       - 'src'
       - 'scripts'
