--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -1,89 +1,81 @@
-# .github/workflows/test-code.yaml
+name: Code testing  
 
-# Name of the workflow
-name: Example testing
-
-# Trigger when?
-on: # Event
-  push: # this will trigger the workflow/pipeline only if there is push on `main` branch
+on:
+  push:
     branches:
-      - dev-kama
-    paths: # the push should be specifically to the folders `src` or `scripts` to trigger this workflow, otherwise, the workflow will not be triggered
-      - 'src'
-      - 'scripts'
-   schedule: # Run this workflow on a scheduled manner given the cron expression (This is a second event to trigger the workflow)
-     - cron: '*/5 * * * *'
+      - main
+    paths:
+      - 'src/**'
+      - 'scripts/**'
+      - 'services/airflow/dags/**'
+      - 'tests/**'
+      - 'configs/**'
+      - '.github/**'
 
-# Allows to only read the contents of the repository
-# `contents: read` permits an action to list the commits
-# `contents: write` allows the action to create a release
 permissions:
   contents: read
 
-# Decalre environment variables to be used in this workflow file
 env:
   message: "Testing code!"
 
-# Tasks
 jobs:
 
-  # Task name
   test-code:
 
-    # OS to run the task
-    runs-on: ubuntu-latest # The ubuntu-latest label currently uses the Ubuntu 22.04 runner image
-    # for more info about the given resources, check this link below
-    # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
+    runs-on: ubuntu-latest
 
-    defaults: # Set working directory of the job
+    defaults:
       run:
-        shell: bash # Set the default shell
+        shell: bash
         working-directory: .
 
-    # The steps of the task/job
     steps:
 
-        # Task name
       - name: Checking out our code
-        # Action type
-        # This action check out the repository in the runner.
         uses: actions/checkout@v4
-        # for more info, check the link below
-        # https://github.com/actions/checkout
-
+        with:
+          repository: 'DrunkTeam/ApartmentPrice'
+        
         # Install a version of Python
       - name: setup python
         uses: actions/setup-python@v5
-        # for more info, check the link below
-        # https://github.com/actions/setup-python
-
-        # Install this specific version 3.11.0 of Python
+        
+        # Install this specific version 3.11.9 of Python
         with:
-          python-version: '3.11.0'
-          cache: 'pip' # caching pip dependencies
+          python-version: '3.11.9'
 
-        # Install Python packages
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+          
+        # Install Python packages  
       - name: install python packages
-
-        # `run` allows to run shell commands
-        # We can use operator `|` for a multi-line command
         run: |
-            python3.11 -m pip install --upgrade pip 
-            pip3.11 install -r installed_requirements.txt 
+          poetry install --no-interaction --no-root
 
-        # You do not need to create a virtual environment here, just use the global installation of Python
-        # Check if requirements.txt file is there
-        #    if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      - name: Store Gdrive credentials
+        run: echo '${{ secrets.GDRIVE_CREDENTIALS_DATA}}' > gdrive-credentials.json
+
+      - name: Configure DVC remote with service account
+        run: |
+          poetry run dvc remote modify drive gdrive_use_service_account true
+          poetry run dvc remote modify drive --local gdrive_service_account_json_file_path gdrive-credentials.json
+
+      - name: Pull DVC data
+        run: |
+          poetry run dvc doctor
+          poetry run dvc pull -vv
+        
+      
       # Task name
       - name: Run your app
-
+      
       # A one-line shell command
-      # This will run the application in the background
+      # This will run the application in the background 
       # It is useful for apps which block the shell
       # to allow next commands to run
-        run: python3.11 src/app.py &
-
+        run: poetry run python3.11 src/app.py &
+      
       - name: Export variables
         run: | 
           echo $PWD
@@ -92,33 +84,9 @@ jobs:
           export AIRFLOW_HOME=$PWD/services/airflow
           export PYTHONPATH=$PWD/src
 
-      - name: Run ZenML server
-        run: zenml down && zenml up
-
-      # Run pytest on tests folder
+      - name: Run ZenML server  
+        run: poetry run zenml down && poetry run zenml up
+        
+      # Run pytest on tests folder    
       - name: Test with pytest
-        run: pytest tests
-
-
-
-  # Another job
-  print_info:
-
-      runs-on: ubuntu-latest
-
-      # Run this job after running the job `test-code`
-      # This allows to set dependency between the jobs
-      needs: test-code
-
-
-      steps:
-
-        # Print passwords and some variables defined on Github website
-        - name: print my password
-          run: | 
-            echo My password is ${{ secrets.PASSWORD }}
-            echo My name is '${{ vars.NAME }}'
-
-        # Print some message defined as environment variable
-        - name: print message
-          run: echo $message
+        run: poetry run pytest tests
