--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -27,10 +27,10 @@ hydra:
   #   n_jobs: -1
   sweeper:
     params:
-       +model: "decision_tree"
+       # +model: "decision_tree"
 #       +model: "gbr"
       # +model: "sn"
-      # +model: "decision_tree, gbr, sn"
+      +model: "decision_tree, gbr, sn, regnet"
 #       +model: "regnet"
 
 reproducibility:
